@@ -86,6 +86,8 @@ Broker:
 - Fix file logging on Windows. Closes #1880.
 - Fix bridge sock not being removed from sock hash on error. Closes #1897.
 - Default for max_queued_messages has been changed to 1000.
+- Add `ciphers_tls1.3` option, to allow setting TLS v1.3 ciphersuites.
+  Closes #1825.
 
 Client library:
 - Client no longer generates random client ids for v3.1.1 clients, these are
